# myRaytacer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
